--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
-    "mongoose": "^7.0.4"
+    "mongoose": "^7.0.4",
+    "serverless-http": "^3.2.0"
   }
 }
