--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "dependencies": {
     "express": "^4.18.2",
     "hbs": "^4.2.0",
-    "mongoose": "^7.0.4",
-    "serverless-http": "^3.2.0"
+    "mongoose": "^7.0.4"
   }
 }
